font size adjustment, adding some photo and gif

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 Ada yang ingin aku sampaikan padamu. Tekan tombol "Next" untuk membaca pesan selanjutnya yaa
             </div>
             <div class="message" id="message-2">
-                <img src="fotbar1.webp" alt="fotbar1">
+                <div class="message-img">
+                    <img src="fotbar1.webp" alt="fotbar1">
+                </div>
                 Bertemu dengan tidak sengaja, FYI that is my first time at Cosplay event, first time selfie with cosplayer, and first time i met u
             </div>
             <div class="message" id="message-3">
@@ -52,19 +54,30 @@
                 honestly im so nervous waktu itu, aku bukan wibu dan tiba tiba dipaksa poto sama hutao 😭😭. 
             </div>
             <div class="message" id="message-4">
-                <img src="first_chat.webp" alt="first_chat">
-                sekitar 2 tahun lalu, siapa sangka coba, berawal dari sebuah DM reply SG wkwkwk,
-                jujur sekarang kalo baca dmnya malu banget sama diri sendiri 😭😭
-                kobisaa aku dulu nge dm kaya gitu 😔😔
+                <div class="message-img">
+                    <img src="first_chat.webp" alt="first_chat">
+                </div>
+                <div class="small-text">
+                    sekitar 2 tahun lalu, siapa sangka coba, berawal dari sebuah DM reply SG wkwkwk,
+                    jujur sekarang kalo baca dmnya malu banget sama diri sendiri 😭😭
+                    kobisaa aku dulu nge dm kaya gitu 😔😔
+                </div>
             </div>
             <div class="message" id="message-5">
-                dan kalo di inget inget, secara teknis kita hts hampir 1 taunn wkwkkw,
-                dari aku sebelum berangkat magang, sampe aku pulang magang, dan kita baru ketemu lagi di event cosplay itu.
+                <div class="message-img">
+                    <img src="chat1.webp" alt="foto chat awal deket">
+                </div>
+                <div class="small-text">
+                    dan kalo di inget inget, secara teknis kita hts hampir 1 taunn wkwkkw,
+                    dari aku sebelum berangkat magang, sampe aku pulang magang, dan kita baru ketemu lagi di event cosplay itu.
+                </div>
             </div>
             <div class="message" id="message-6">
-                Di kolom DM ig kita, semuaa keseruanku slalu ku pamerin ke kamuu wkwkwkw.
+                <div class="medium-text">
+                    Di kolom DM ig kita, semuaa keseruanku slalu ku pamerin ke kamuu wkwkwkw.
                 Yang cuman di blitar doang, di Bali waktu itu, keknya ada yang minta pie susu deh dulu wkwkw.
                 Dan sampe aku di Jogja, semua aku ceritain ke kamu, padahal kalo di inget juga bukan siapa siapa hahaha.
+                </div>
             </div>
             <div class="message" id="message-7">
                 Mungkin kalo biasa nya orang orang ngaggep tanggal jadian itu paling special, bagiku engga,
@@ -72,9 +85,14 @@
                 Bahkan sebelum jadian pun, kamu emang udah someone special buatku.
             </div>
             <div class="message" id="message-8">
-                aku, kamu, dan "aku cakep ngga? aku udah cantik kann? aku cantikk ngga ??" waktu itu wkwkw.
-                sumpah, kamu itu lucuuukk pake banget, dan bikin aku senyum senyum sendiri kalo inget itu.
-                kamu cantikkk pake banget, biasanya cuman liat di poto doang, first time ketemu wkwk
+                <div class="message-img">
+                    <img src="fotbar2.webp" alt="foto bareng pertama 2025">
+                </div>    
+                <div class="small-text">
+                    aku, kamu, dan "aku cakep ngga? aku udah cantik kann? aku cantikk ngga ??" waktu itu wkwk.
+                    sumpah, kamu itu lucuuu pake banget, dan bikin aku senyum senyum sendiri kalo inget itu.
+                    kamu cantikkk pake banget, biasanya cuman liat di poto doang, first time ketemu wkwk
+                </div>
             </div>
             <div class="message" id="message-9">
                 Mungkin kalo ditanya momen apa yang paling berkesan, pasti salah satunya momen di kampung coklat waktu itu.
@@ -95,8 +113,13 @@
                 anjir gilaa enak bgt kacau pikiranku, tantee udahh tante wkwkwk.
             </div>
             <div class="message" id="message-13">
-                jujur awalnya aku shock, unbelieve, dan bingung, kobisa, aku salah apa yaa?
+                <div class="message-img">
+                    <img src="obito.gif" alt="obito">
+                </div>
+                <div class="medium-text">
+                    jujur awalnya aku shock, unbelieve, dan bingung, kobisa, aku salah apa yaa?
                 kenapa secepat itu? awalnya terasa sakit bgt, udah kaya penderitaan obito rasanya.
+                </div>
             </div>
             <div class="message" id="message-14">
                 But, after our short deep talk waktu itu, lagi lagi kamu berhasil merubahku. Aku jadi lebih dewasa,
@@ -129,9 +152,14 @@
                 aku minta maaf untuk segalanya.
             </div>
             <div class="message" id="message-20">
-                Terima kasih untuk semua kenangan yang kita buat,
+                <div class="message-img">
+                    <img src="thankyou.gif" alt="thank you gif">
+                </div>
+                <div class="medium-text">
+                    Terima kasih untuk semua kenangan yang kita buat,
                 terima kasih untuk semua hal yang kita lalui bersama, 
                 terima kasih untuk semuanya.
+                </div>
             </div>
             <div class="message" id="message-21">
                 Sehat selalu, Nabila. 
@@ -140,15 +168,22 @@
                 jangan biarkan siapapun merenggut masa depanmu.
             </div>
             <div class="message" id="message-22">
+                <div class="message-img">
+                    <img src="bye.gif" alt="bye">
+                </div>
                 See u next time, Nabila.
                 Semoga kita bisa bertemu lagi di lain waktu, di lain kesempatan, di lain cerita.
             </div>
             <div class="message" id="message-23">
-                <img src="01.webp" alt="eps 01 Shingeki no Kyojin">
+                <div class="message-img">
+                    <img src="01.webp" alt="eps 01 Shingeki no Kyojin">
+                </div>
                 Kepadamu, 2 tahun mulai sekarang, hari dimana aku bahagia mengenalmu.
             </div>
             <div class="message" id="message-24">
-                <img src="80.webp" alt="eps 80 Shingeki no Kyojin">
+                <div class="message-img">
+                    <img src="80.webp" alt="eps 80 Shingeki no Kyojin">
+                </div>
                 Darimu, 2 tahun yang lalu, hari dimana aku bahagia melepaskanmu.
             </div>
             <div class="message" id="message-25">
